Index.html and Brain Tickle Game
Initializing pages and styles

--- a/index.html
+++ b/index.html
@@ -5,45 +5,57 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Lesson 20 Redo</title>
-    <link rel="stylesheet" href="css/styleredo.css">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
+    <title>Mindful | Anxious</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
     <section>
-        <div class="row subsection criteria-list">
-            <div class="col-xs-4 criteria">
-                <div class="criteria-image">
+        <div class='container'>
+            <div class="row subsection mood-list">
+                <div class="col-xs-12 col-sm-6 col-lg-4 mood">
+                    <a href="anxious.html">
+                        <div class="mood-image">
+                            <img class='img-responsive' src="images/spikyBreathing.gif" />
+                        </div>
+                    </a>
                 </div>
-            </div>
 
-            <div class="col-xs-4 criteria">
-                <div class="criteria-image">
+
+                <div class="col-xs-12 col-sm-6 col-lg-4 mood">
+                    <a href="#">
+                        <div class="mood-image">
+                            <img class='img-responsive' src="images/spikyBreathing.gif" />
+                        </div>
+                    </a>
+                </div>
+                
+                <div class="col-xs-12 col-sm-6 col-lg-4 mood">
+                    <a href="#">
+                        <div class="mood-image">
+                            <img class='img-responsive' src="images/spikyBreathing.gif" />
+                        </div>
+                    </a>
                 </div>
             </div>
-            <div class="col-xs-4 criteria">
-                <div class="criteria-image">
+            <div class="row subsection mood-list">
+                <div class="col-xs-12 col-sm-6 col-lg-4 mood">
+                    <div class="mood-image">
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-4 mood">
+                    <div class="mood-image">
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-4 mood">
+                    <div class="mood-image">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row subsection criteria-list">
-            <div class="col-xs-4 criteria">
-                <div class="criteria-image">
-                </div>
-            </div>
-            <div class="col-xs-4 criteria">
-                <div class="criteria-image">
-                </div>
-            </div>
-            <div class="col-xs-4 criteria">
-                <div class="criteria-image">
-                </div>
-            </div>
-        </div>
-
     </section>
 
 
