Entire Path to Brain Tickle Calm Card
Additional pages, folders, imges

--- a/nervous/calm-card/nervous-calm-cards.html
+++ b/nervous/calm-card/nervous-calm-cards.html
@@ -17,10 +17,11 @@
         <div class='container text-center'>
             <div class="row subsection mood-list">
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href='nervous/nervous.html'>
+                    <a href='#'>
                         <div class="mood-image">
                             <img class='img-responsive' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Calm Card 1</h2>
                     </a>
                 </div>
 
@@ -30,6 +31,7 @@
                         <div class="mood-image">
                             <img class='img-responsive' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Calm Card 2</h2>
                     </a>
                 </div>
             </div>
@@ -40,20 +42,21 @@
                         <div class="mood-image">
                             <img class='img-responsive' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Calm Card 3</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="#">
+                    <a href="/nervous/calm-card/braintickle/braintickle.html">
                         <div class="mood-image">
                             <img class='img-responsive' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Brain Tickle</h2>
                     </a>
                 </div>
                 
             </div>
         </div>
     </section>
-
 
 
 
