--- a/nervous/nervous.html
+++ b/nervous/nervous.html
@@ -11,13 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
     <section>
         <div class='container text-center'>
             <div class="row subsection mood-list">
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href='nervous/nervous.html'>
+                    <a href='#'>
                         <div class="mood-image">
                             <img class='img-responsive' src="https://placehold.it/350x250" />
                         </div>
@@ -26,10 +25,11 @@
 
 
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="#">
+                    <a href="/nervous/calm-card/nervous-calm-cards.html">
                         <div class="mood-image">
                             <img class='img-responsive' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>CalmCards</h2>
                     </a>
                 </div>
             </div>
@@ -53,8 +53,6 @@
             </div>
         </div>
     </section>
-
-
 
 
 
