--- a/nervous.html
+++ b/nervous.html
@@ -6,32 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindful</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
     <section>
         <div class='container text-center'>
             <div class="row subsection mood-list">
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href='#'>
+                    <a href='/nervous/nervous-calm-conversations.html'>
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
-                        <h2>Calm Card 1</h2>
+                        <h2>Calm Conversations</h2>
                     </a>
                 </div>
 
 
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="#">
+                    <a href="/nervous/nervous-calm-cards.html">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
-                        <h2>Calm Card 2</h2>
+                        <h2>Calm Cards</h2>
                     </a>
                 </div>
             </div>
@@ -40,24 +39,21 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
-                        <h2>Calm Card 3</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="/nervous/calm-card/braintickle/braintickle.html">
+                    <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
-                        <h2>Brain Tickle</h2>
                     </a>
                 </div>
                 
             </div>
         </div>
     </section>
-
 
 
 
