--- a/nervous/nervous-calm-cards.html
+++ b/nervous/nervous-calm-cards.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindful</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
     <section>
         <div class='container text-center'>
@@ -18,18 +19,19 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href='#'>
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Calm Card 1</h2>
                     </a>
                 </div>
 
 
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="/nervous/calm-card/nervous-calm-cards.html">
+                    <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
-                        <h2>CalmCards</h2>
+                        <h2>Calm Card 2</h2>
                     </a>
                 </div>
             </div>
@@ -38,21 +40,24 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Calm Card 3</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="#">
+                    <a href="/calm-cards/braintickle/braintickle.html">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="/images/braintickle/braintickle-icon.png" />
                         </div>
+                        <h2>Brain Tickle</h2>
                     </a>
                 </div>
                 
             </div>
         </div>
     </section>
+
 
 
 
