rename files, remove dashes

--- a/nervous/nervouscalmcards.html
+++ b/nervous/nervouscalmcards.html
@@ -17,9 +17,9 @@
         <div class='container text-center'>
             <div class="row subsection mood-list">
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href='/calm-cards/balloonbreath/balloonbreath.html'>
+                    <a href='/calmCards/balloonbreath/balloonbreath.html'>
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="/images/balloon-breath/balloon-breath-icon.png" />
+                            <img class='img-responsive center-block' src="/images/balloonBreath/balloonbreath.gif" />
                         </div>
                         <h2>Balloon Breath</h2>
                     </a>
@@ -46,9 +46,9 @@
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="/calm-cards/braintickle/braintickle.html">
+                    <a href="/calmCards/braintickle/braintickle.html">
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="/images/braintickle/braintickle-icon.png" />
+                            <img class='img-responsive center-block' src="/images/braintickle/braintickleIcon.png" />
                         </div>
                         <h2>Brain Tickle</h2>
                     </a>
