--- a/nervous/nervousCalmConversations.html
+++ b/nervous/nervousCalmConversations.html
@@ -27,9 +27,9 @@
 
 
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="/calm-conversations/kind-wishes.html">
+                    <a href="/calmConversations/kindWishes.html">
                         <div class="mood-image">
-                            <img class='img-responsive' src="/images/kind-wishes/Kind%20Wishes%201.png" />
+                            <img class='img-responsive' src="/images/kindWishes/KindWishes1.png" />
                         </div>
                         <h2>Kind Wishes</h2>
                     </a>
