change NervousCalmCards url

--- a/nervous/nervouscalmcards.html
+++ b/nervous/nervouscalmcards.html
@@ -19,7 +19,7 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href='/calmCards/balloonbreath/balloonbreath.html'>
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="/images/balloonBreath/balloonbreath.gif" />
+                            <img class='img-responsive center-block' src="/images/balloonBreath/balloonbreathicon.png" />
                         </div>
                         <h2>Balloon Breath</h2>
                     </a>
