--- a/nervous/nervousCalmConversations.html
+++ b/nervous/nervousCalmConversations.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindful</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
 
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href="calmConversations/kindWishes.html">
+                    <a href="../calmConversations/kindWishes.html">
                         <div class="mood-image">
                             <img class='img-responsive' src="images/kindWishes/KindWishes1.png" />
                         </div>
