--- a/nervous/nervouscalmcards.html
+++ b/nervous/nervouscalmcards.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindful</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
         <div class='container text-center'>
             <div class="row subsection mood-list">
                 <div class="col-xs-12 col-sm-6 mood">
-                    <a href='calmCards/balloonbreath/balloonbreath.html'>
+                    <a href='../calmCards/balloonbreath/balloonbreath.html'>
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="../images/balloonBreath/balloonbreathicon.png" />
                         </div>
