--- a/calmCards/braintickle/braintickle.html
+++ b/calmCards/braintickle/braintickle.html
@@ -20,15 +20,15 @@
                 
                 <div class='img-carousel center-block text-center'>
                     <div id='step-1' class='showing steps'>
-                        <img src='/images/braintickle/touchHead.png'>
+                        <img src='../images/braintickle/touchHead.png'>
                         <p>Place your index finger to your forehead.</p>
                     </div>
                     
                     <div id='step-2' class='steps center-block'> 
-                        <img src='/images/braintickle/touchHead.png' id='head'>
-                        <img src='/images/braintickle/textureIcon.png' id='texture-img' class='symptom'>
-                        <img src='/images/braintickle/temperatureIcon.png'  id='temp-img' class='symptom'>
-                        <img src='/images/braintickle/moistureIcon.jpg'  id='moisture-img' class='symptom'>
+                        <img src='../images/braintickle/touchHead.png' id='head'>
+                        <img src='../images/braintickle/textureIcon.png' id='texture-img' class='symptom'>
+                        <img src='../images/braintickle/temperatureIcon.png'  id='temp-img' class='symptom'>
+                        <img src='../images/braintickle/moistureIcon.jpg'  id='moisture-img' class='symptom'>
 
                         <h2 class='symptom-text' id='texture-text'>Texture</h2>
                         <h2 class='symptom-text' id='temp-text'>Temperature</h2>
