brain tickle src

--- a/calmCards/braintickle/braintickle.html
+++ b/calmCards/braintickle/braintickle.html
@@ -25,10 +25,10 @@
                     </div>
                     
                     <div id='step-2' class='steps center-block'> 
-                        <img src='../images/braintickle/touchHead.png' id='head'>
-                        <img src='../images/braintickle/textureIcon.png' id='texture-img' class='symptom'>
-                        <img src='../images/braintickle/temperatureIcon.png'  id='temp-img' class='symptom'>
-                        <img src='../images/braintickle/moistureIcon.jpg'  id='moisture-img' class='symptom'>
+                        <img src='../../images/braintickle/touchHead.png' id='head'>
+                        <img src='../../images/braintickle/textureIcon.png' id='texture-img' class='symptom'>
+                        <img src='../../images/braintickle/temperatureIcon.png'  id='temp-img' class='symptom'>
+                        <img src='../../images/braintickle/moistureIcon.jpg'  id='moisture-img' class='symptom'>
 
                         <h2 class='symptom-text' id='texture-text'>Texture</h2>
                         <h2 class='symptom-text' id='temp-text'>Temperature</h2>
