--- a/nervous/nervousCalmConversations.html
+++ b/nervous/nervousCalmConversations.html
@@ -29,7 +29,7 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="../calmConversations/kindWishes.html">
                         <div class="mood-image">
-                            <img class='img-responsive' src="images/kindWishes/KindWishes1.png" />
+                            <img class='img-responsive' src="../images/kindWishes/KindWishes1.png" />
                         </div>
                         <h2>Kind Wishes</h2>
                     </a>
