kind wishes animation

--- a/nervous.html
+++ b/nervous.html
@@ -41,6 +41,7 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Music</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
@@ -48,6 +49,7 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="https://placehold.it/350x250" />
                         </div>
+                        <h2>Games</h2>
                     </a>
                 </div>
                 
