--- a/nervous.html
+++ b/nervous.html
@@ -18,7 +18,7 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href='nervous/nervousCalmConversations.html'>
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="images/calmActivities/calmConversationIcon.png" />
                         </div>
                         <h2>Calm Conversations</h2>
                     </a>
@@ -28,7 +28,7 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="nervous/nervouscalmcards.html">
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="images/calmActivities/calmCardsIcon.png" />
                         </div>
                         <h2>Calm Cards</h2>
                     </a>
@@ -39,7 +39,7 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="images/calmActivities/calmMusicIcon.png" />
                         </div>
                         <h2>Music</h2>
                     </a>
@@ -47,7 +47,7 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="images/calmActivities/calmingGamesIcon.png" />
                         </div>
                         <h2>Games</h2>
                     </a>
