--- a/nervous/nervousCalmConversations.html
+++ b/nervous/nervousCalmConversations.html
@@ -19,9 +19,9 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href='#'>
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive' src="../images/calmActivities/calmConversations/ActionReaction.jpg" />
                         </div>
-                        <h2>Calm Conversation 1</h2>
+                        <h2>Action Reaction</h2>
                     </a>
                 </div>
 
@@ -40,17 +40,17 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive' src="../images/calmActivities/calmConversations/mappingEmotions.jpg" />
                         </div>
-                        <h2>Calm Conversation</h2>
+                        <h2>Mapping Emotions</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive' src="https://placehold.it/350x250" />
+                            <img class='img-responsive' src="../images/calmActivities/calmConversations/roseAndThornsGame.png" />
                         </div>
-                        <h2>Calm Conversation</h2>
+                        <h2>Rose And Thorns</h2>
                     </a>
                 </div>
                 
