--- a/nervous/nervouscalmcards.html
+++ b/nervous/nervouscalmcards.html
@@ -29,7 +29,7 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="../images/calmActivities/calmCard/standingTall.png" />
                         </div>
                         <h2>Calm Card 2</h2>
                     </a>
@@ -40,9 +40,9 @@
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="#">
                         <div class="mood-image">
-                            <img class='img-responsive center-block' src="https://placehold.it/350x250" />
+                            <img class='img-responsive center-block' src="../images/calmActivities/calmCard/justBe.png" />
                         </div>
-                        <h2>Calm Card 3</h2>
+                        <h2>Just Be</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
