--- a/calmConversations/kindWishes.html
+++ b/calmConversations/kindWishes.html
@@ -19,7 +19,7 @@
             <div class='container'>
                 <h1>Kind Wishes</h1>
                 
-                <div id='img-carousel'>
+                <div id='carousel'>
                     <div id='step-1' class='showing steps'>
                         <img src='../images/kindWishes/KindWishes2Self.png' class='center-block'>
                         <p>Make a kind wish for yourself.</p>
