--- a/nervous.html
+++ b/nervous.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindful</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Shadows+Into+Light|Shadows+Into+Light+Two" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -20,7 +20,6 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/calmActivities/calmConversationIcon.png" />
                         </div>
-                        <h2>Calm Conversations</h2>
                     </a>
                 </div>
 
@@ -30,7 +29,6 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/calmActivities/calmCardsIcon.png" />
                         </div>
-                        <h2>Calm Cards</h2>
                     </a>
                 </div>
             </div>
@@ -41,7 +39,6 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/calmActivities/calmMusicIcon.png" />
                         </div>
-                        <h2>Music</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
@@ -49,7 +46,6 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/calmActivities/calmingGamesIcon.png" />
                         </div>
-                        <h2>Games</h2>
                     </a>
                 </div>
                 
