--- a/nervous/nervousCalmConversations.html
+++ b/nervous/nervousCalmConversations.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindful</title>
     <link rel="stylesheet" href="../styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Shadows+Into+Light|Shadows+Into+Light+Two" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -21,7 +21,6 @@
                         <div class="mood-image">
                             <img class='img-responsive' src="../images/calmActivities/calmConversations/ActionReaction.jpg" />
                         </div>
-                        <h2>Action Reaction</h2>
                     </a>
                 </div>
 
@@ -31,7 +30,6 @@
                         <div class="mood-image">
                             <img class='img-responsive' src="../images/kindWishes/KindWishes1.png" />
                         </div>
-                        <h2>Kind Wishes</h2>
                     </a>
                 </div>
             </div>
@@ -42,7 +40,6 @@
                         <div class="mood-image">
                             <img class='img-responsive' src="../images/calmActivities/calmConversations/mappingEmotions.jpg" />
                         </div>
-                        <h2>Mapping Emotions</h2>
                     </a>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
@@ -50,7 +47,6 @@
                         <div class="mood-image">
                             <img class='img-responsive' src="../images/calmActivities/calmConversations/roseAndThornsGame.png" />
                         </div>
-                        <h2>Rose And Thorns</h2>
                     </a>
                 </div>
                 
