--- a/calmCards/balloonbreath/balloonbreath.html
+++ b/calmCards/balloonbreath/balloonbreath.html
@@ -7,7 +7,7 @@
     <title>Mindful</title>
     <link rel="stylesheet" href="../../styles/style.css">
     <link rel='stylesheet' href="styles/balloonbreathStyles/balloonbreath.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Shadows+Into+Light|Shadows+Into+Light+Two" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
