--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mindful</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Shadows+Into+Light|Shadows+Into+Light+Two" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
     <section>
+        <h1 class='text-center'>Today I am feeling...</h1>
         <div class='container text-center'>
             <div class="row subsection mood-list">
                 <div class="col-xs-12 col-sm-6 mood">
@@ -21,8 +22,8 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/landingpage/excitedStar.png" />
                         </div>
-                        <h2>Excited</h2>
                     </a>
+                    <h2>Excited</h2>
                 </div>
 
 
@@ -31,8 +32,8 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/landingpage/sadStar.png" />
                         </div>
-                        <h2>Sad</h2>
                     </a>
+                    <h2>Sad</h2>
                 </div>
             </div>
             
@@ -42,16 +43,16 @@
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/landingpage/madStar.png" />
                         </div>
-                        <h2>Mad</h2>
                     </a>
+                    <h2>Mad</h2>
                 </div>
                 <div class="col-xs-12 col-sm-6 mood">
                     <a href="nervous.html">
                         <div class="mood-image">
                             <img class='img-responsive center-block' src="images/landingpage/nervousStar.png" />
                         </div>
-                        <h2>Nervous</h2>
                     </a>
+                    <h2>Nervous</h2>
                 </div>
                 
             </div>
