trying to fix brain Tickle images

--- a/calmCards/braintickle/braintickle.html
+++ b/calmCards/braintickle/braintickle.html
@@ -20,6 +20,7 @@
                 <div class='carousel center-block text-center'>
                     
                     <div id='step-2' class='steps center-block'> 
+                        <img src='../../images/braintickle/brainTickleBoy.png' id='pre-head'>
                         <img src='../../images/braintickle/touchHead.png' id='head'>
                         <img src='../../images/braintickle/textureIcon.png' id='texture-img' class='symptom'>
                         <img src='../../images/braintickle/temperatureIcon.png'  id='temp-img' class='symptom'>
