--- a/calmConversations/kindWishes.html
+++ b/calmConversations/kindWishes.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mindful</title>
+    <title>Calm Corner</title>
     <link rel="stylesheet" href="../../styles/style.css">
     <link rel='stylesheet' href='../styles/kindWishes/kindwishes.css'
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
